--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ input {
             height: 200px;
         }
 
-        .list_of_candidate,.remaining_members {
+        .list_of_candidate {
             width: 100%;
             max-height: 150px;
             border: 1px solid var(--gray);
@@ -192,11 +192,53 @@ input {
 
                     p {
                         letter-spacing: 1pt;
-                        span{
-                            color:var(--blue)
+
+                        span {
+                            color: var(--blue)
                         }
                     }
                 }
+            }
+        }
+
+        .remaining_members {
+            width: 100%;
+            max-height: 150px;
+            ul {
+                width: 100%;
+                max-width: 300px;
+                max-height: inherit;
+                overflow-y: auto;
+                display: flex;
+                flex-direction: column;
+                gap: 2px;
+                scrollbar-width: thin;
+                scrollbar-color: #888 transparent;
+                -ms-overflow-style: none;
+
+                li {
+                    border: 1px solid var(--gray);
+                    border-bottom: .5px solid var(--gray);
+                    padding: 8px 12px;
+                    text-transform: capitalize;
+                }
+            }
+
+            ul::-webkit-scrollbar {
+                width: 6px;
+            }
+
+            ul::-webkit-scrollbar-track {
+                background: transparent;
+            }
+
+            ul::-webkit-scrollbar-thumb {
+                background-color: #888;
+                border-radius: 4px;
+            }
+
+            ul::-webkit-scrollbar-thumb:hover {
+                background-color: #555;
             }
         }
     }
